--- a/index.html
+++ b/index.html
@@ -510,119 +510,7 @@
           </div>
         </div>
         <!-- / End Single Person -->
-        <!-- Start Single Person -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="single-person">
-            <div class="person-image">
-              <img src="images/nidhi.jpeg" alt="">
-
-            </div>
-            <div class="person-info">
-              <h3 class="full-name">Nidhi Jha</h3>
-              <span class="speciality">Organizer</span>
-              <div class="social-links-team"
-                style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
-                <div class="linkedin">
-                  <a style="color: #3e64ff;" href="https://www.linkedin.com/in/nidhijhaa/" target="_blank">
-                    <i class="bi bi-linkedin"></i>
-                  </a>
-                </div>
-                <!-- <div class="twitter">
-                  <a style="color: #861e19;" href="">
-                    <i class="bi bi-twitter"></i>
-                  </a>
-                </div> -->
-                <!-- <div class="github">
-
-                  <a style="color: #861e19;" href="https://github.com/Nidhijhaa" target="_blank"><i
-                      class="bi bi-github"></i></a>
-                </div>
-                <div class="instagram">
-                  <a style="color: #861e19;" href=" https://www.instagram.com/nidhii__jha/" target="_blank"><i
-                      class="bi bi-instagram"></i></a>
-
-                </div> -->
-
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- / End Single Person -->
-        <!-- Start Single Person -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="single-person">
-            <div class="person-image">
-              <img src="images/ankit.jpg" alt="">
-
-            </div>
-            <div class="person-info">
-              <h3 class="full-name">Ankit Luthra</h3>
-              <span class="speciality">Organizer</span>
-              <div class="social-links-team"
-                style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
-                <div class="linkedin">
-                  <a href="https://www.linkedin.com/in/luthra2001/" style="color: #3e64ff;" target="_blank">
-                    <i class="bi bi-linkedin"></i>
-                  </a>
-                </div>
-                <!-- <div class="twitter">
-                  <a style="color: #861e19;" href="https://twitter.com/AnkitLu47631957" target="_blank">
-                    <i class="bi bi-twitter"></i>
-                  </a>
-                </div>
-                <div class="github">
-
-                  <a style="color: #861e19;" href="https://github.com/ankii2001" target="_blank"><i
-                      class="bi bi-github"></i></a>
-                </div>
-                <div class="instagram">
-                  <a style="color: #861e19;" href="https://www.instagram.com/ankiiluthra/" target="_blank"><i
-                      class="bi bi-instagram"></i></a>
-
-                </div> -->
-
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- / End Single Person -->
-        <!-- Start Single Person -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="single-person">
-            <div class="person-image">
-              <img src="images/aarzoo.png" alt="">
-
-            </div>
-            <div class="person-info">
-              <h3 class="full-name">Arzoo Shukla</h3>
-              <span class="speciality">Organizer</span>
-              <div class="social-links-team"
-                style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
-                <div class="linkedin">
-                  <a style="color: #3e64ff;" href="https://www.linkedin.com/in/aarzoo-shukla-80b7b9215" target="_blank">
-                    <i class="bi bi-linkedin"></i>
-                  </a>
-                </div>
-                <!-- <div class="twitter">
-                  <a style="color: #861e19;" href="" target="_blank">
-                    <i class="bi bi-twitter"></i>
-                  </a>
-                </div>
-                <div class="github">
-
-                  <a style="color: #861e19;" href="" target="_blank"><i class="bi bi-github"></i></a>
-                </div> -->
-                <!-- <div class="instagram">
-                  <a style="color: #861e19;" href="https://www.instagram.com/_aarzooshukla/ " target="_blank"><i
-                      class="bi bi-instagram"></i></a>
-
-                </div> -->
-
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- / End Single Person -->
+        
         <!-- Start Single Person -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
@@ -660,16 +548,16 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="images/parul.jpeg" alt="parul" style="width: inherit;">
+              <img src="images/sahil.jpeg" alt="parul" style="width: inherit;">
 
             </div>
             <div class="person-info">
-              <h3 class="full-name">Parul Khatri</h3>
+              <h3 class="full-name">Sahil Sharma</h3>
               <span class="speciality">Organizer</span>
               <div class="social-links-team"
                 style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
                 <div class="linkedin">
-                  <a style="color: #3e64ff;" href="https://www.linkedin.com/in/parul-khatri-06b86420b/" target="_blank">
+                  <a style="color: #3e64ff;" href="https://www.linkedin.com/in/sahil-sharma-745b24207/" target="_blank">
                     <i class="bi bi-linkedin"></i>
                   </a>
                 </div>
