--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </div>
             <div class="person-info">
               <h3 class="full-name">Rishav Jha</h3>
-              <span class="speciality">Organizer</span>
+              <span class="speciality">Community manager</span>
               <div class="social-links-team"
                 style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
                 <div class="linkedin">
@@ -406,7 +406,7 @@
             </div>
             <div class="person-info">
               <h3 class="full-name">Sagar Vashnav</h3>
-              <span class="speciality">Organizer</span>
+              <span class="speciality">Design Manager</span>
               <div class="social-links-team"
                 style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
                 <div class="linkedin">
@@ -444,7 +444,7 @@
             </div>
             <div class="person-info">
               <h3 class="full-name">Onkar Vatsa</h3>
-              <span class="speciality">Organizer</span>
+              <span class="speciality">Technical Head</span>
               <div class="social-links-team"
                 style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
                 <div class="linkedin">
@@ -482,7 +482,7 @@
             </div>
             <div class="person-info">
               <h3 class="full-name">Aman Shekhar</h3>
-              <span class="speciality">Organizer</span>
+              <span class="speciality">Event Manager</span>
               <div class="social-links-team"
                 style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
                 <div class="linkedin">
@@ -510,7 +510,6 @@
           </div>
         </div>
         <!-- / End Single Person -->
-        
         <!-- Start Single Person -->
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
@@ -520,7 +519,7 @@
             </div>
             <div class="person-info">
               <h3 class="full-name">Kanak Jadaun</h3>
-              <span class="speciality">Organizer</span>
+              <span class="speciality">Social Media Manager</span>
               <div class="social-links-team"
                 style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
                 <div class="linkedin">
@@ -548,12 +547,12 @@
         <div class="col-sm-6 col-lg-4 col-xl-3">
           <div class="single-person">
             <div class="person-image">
-              <img src="images/sahil.jpeg" alt="parul" style="width: inherit;">
+              <img src="images/sahil.png" alt="parul" style="width: inherit;">
 
             </div>
             <div class="person-info">
               <h3 class="full-name">Sahil Sharma</h3>
-              <span class="speciality">Organizer</span>
+              <span class="speciality">Marketing Head</span>
               <div class="social-links-team"
                 style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
                 <div class="linkedin">
@@ -581,43 +580,6 @@
           </div>
         </div>
         <!-- / End Single Person -->
-        <!-- Start Single Person -->
-        <div class="col-sm-6 col-lg-4 col-xl-3">
-          <div class="single-person">
-            <div class="person-image">
-              <img src="images/gunesh.png" alt="">
-
-            </div>
-            <div class="person-info">
-              <h3 class="full-name">Gunesh Gautam</h3>
-              <span class="speciality">Organizer</span>
-              <div class="social-links-team"
-                style="display: flex; justify-content: space-around; font-size: 28px; background-color: rgba(255, 255, 255, 0.85); border-radius: 6px; margin: 10px 0;">
-                <div class="linkedin">
-                  <a style="color: #3e64ff;" href="https://www.linkedin.com/company/hackkrmu/">
-                    <i class="bi bi-linkedin"></i>
-                  </a>
-                </div>
-                <!-- <div class="twitter">
-                  <a style="color: #861e19;" href="">
-                    <i class="bi bi-twitter"></i>
-                  </a>
-                </div>
-                <div class="github">
-
-                  <a style="color: #861e19;" href=""><i class="bi bi-github"></i></a>
-                </div>  -->
-                  <!-- <div class="instagram">
-                    <a style="color: #861e19;" href="https://instagram.com/gunesh__gautam" target="_blank"><i
-                        class="bi bi-instagram"></i></a>
-
-                  </div> -->
-
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- / End Single Person -->
         </div>
       </div>
   </section>
@@ -659,46 +621,10 @@
                 – we want it to be an event that you’ll thoroughly enjoy while expanding your skillset and network.</p>
             </div>
             <div class="faq__item">
-              <h2 class="faq__question">Can I work on my hack before the event?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">No. To maintain the competition’s integrity and fairness, all work on your hack
-                must be done at the event. All projects with work done prior to the hackathon’s duration will be
-                eliminated from judging. However, you are encouraged to touch up on your skills or bring any hardware in
-                preparation for the event!
-              </p>
-            </div>
-            <div class="faq__item">
-              <h2 class="faq__question">When do hacker applications open?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">HACK KRMU 2.0 applications open from 1st November, 2022 and will remain open till
-                23rd November, 2022.</p>
-            </div>
-            <div class="faq__item">
-              <h2 class="faq__question">Am I eligible to participate?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">Any college or university students are eligible to participate in our event.
-              </p>
-            </div>
-            <div class="faq__item">
-              <h2 class="faq__question">Do I need to know how to code?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">No! While you might need to know the basics of coding to make a project, you are
-                more than welcome to get started with it during the hackathon itself. Additionally, if you’re a skilled
-                designer or communicator, your design and presentation skills are also very valuable towards the success
-                of your project!
-                .
-              </p>
-            </div>
-            <div class="faq__item">
               <h2 class="faq__question">Can I sign up with a team?<img class="arrow-icon"
                   src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">We allow teams having up to 8 people to participate in the hackathon. Only the team
+              <p class="faq__answer">We allow teams having up to 5 people to participate in the hackathon. Only the team
                 lead needs to sign up individually and specify the other team members on their application.</p>
-            </div>
-            <div class="faq__item">
-              <h2 class="faq__question">What if I don’t have a team?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">Don’t worry, we allow solo participation.</p>
             </div>
             <div class="faq__item">
               <h2 class="faq__question">What should I bring?<img class="arrow-icon" src="images/icon-arrow-down.svg"
@@ -708,69 +634,11 @@
                 Everything else required for the event will be provided to you!</p>
             </div>
             <div class="faq__item">
-              <h2 class="faq__question">Will there be hardware provided at the event?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">No! If your project requires any external hardware such as Arduino or Raspberry Pi
-                , you need to bring it by yourself.</p>
-            </div>
-            <div class="faq__item">
               <h2 class="faq__question">How much does it cost to attend?<img class="arrow-icon"
                   src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
               <p class="faq__answer">Apart from the registration fees, you don’t need to pay any additional amount.</p>
             </div>
-            <div class="faq__item">
-              <h2 class="faq__question">What COVID-19 precautions will be in place at the event?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">We will be following the guidance put forth by the Indian Government for large
-                events at the time of the event. More details will follow closer to the event and any major changes to
-                guidelines or precautions will be communicated to event participants.</p>
-            </div>
-
-
-
-            <div class="faq__item">
-              <h2 class="faq__question">What is a hackathon?<img class="arrow-icon" src="images/icon-arrow-down.svg"
-                  alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">A hackathon is best described as an “invention marathon”. Anyone who has an
-                interest in technology attends a hackathon to learn, build & share their creations over the course of a
-                weekend in a relaxed and welcoming atmosphere. You don’t have to be a programmer, and you certainly
-                don’t have to be majoring in Computer Science.
-
-                Hackathons are about bringing your crazy ideas to reality through technology. It’s an event where
-                anyone, regardless of their individual field can come & participate to learn, build & share their
-                creations.
-              </p>
-            </div>
-            <div class="faq__item">
-              <h2 class="faq__question">Will I annoy people if I ask them questions?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">Not at all! This is a common misconception about hackathons and in actual fact,
-                it’s the complete opposite. The environment at these events is designed specifically to encourage
-                everyone to have fun and help each other. If you’re ever stuck on anything, go find a volunteer who
-                might be able to help and if not, they will almost certainly know who can.</p>
-            </div>
-            <div class="faq__item">
-              <h2 class="faq__question">What if I don’t know anybody there?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">Not to worry! You’ll meet people when you get there. Everybody’s very friendly. A
-                lot of people go to hackathons without teams. So it’s perfectly normal to go around to people, tell them
-                you’re looking for a team, and ask if you can help out. Hackathons will often run team-matching sessions
-                at the start to help you meet people.
-
-                Pro tip: Invite your friends to come to the hackathon too! That way you’re guaranteed to have at least
-                one familiar face.
-
-              </p>
-            </div>
-            <div class="faq__item">
-              <h2 class="faq__question">What if I don’t want to present my hack?<img class="arrow-icon"
-                  src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”></h2>
-              <p class="faq__answer">You might think your project isn’t impressive or it might not be finished so you
-                don’t want to present it. You should present it anyway! Honestly, hackathons aren’t about being the best
-                or being competitive. It’s all about having fun, making friends, and learning how to become better at
-                things you care about. Presenting your hack gives you a chance to be proud of what you’ve done, and you
-                should be proud.</p>
-            </div>
+            
             <div class="faq__item">
               <h2 class="faq__question">How is my data being used by HACK KRMU 2.0?
                 <img class="arrow-icon" src="images/icon-arrow-down.svg" alt="" aria-hidden=“true”>
